<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/logg_inn_overskrift"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_text"
      android:textSize="48sp"
      android:textStyle="bold" />

  <EditText
      android:id="@+id/comment_field"
      android:layout_width="351dp"
      android:layout_height="78dp"
      android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress" />

  <EditText
      android:id="@+id/passwordInput"
      android:layout_width="352dp"
      android:layout_height="75dp"
      android:autofillHints="AUTOFILL_HINT_PASSWORD"
      android:hint="@string/password_hint"
      android:inputType="textPassword" />

  <Button
      android:id="@+id/loginButton"
      android:layout_width="390dp"
      android:layout_height="75dp"
      android:text="@string/login_btn" />

  <Button
      android:id="@+id/signupButton"
      android:layout_width="391dp"
      android:layout_height="84dp"
      android:text="@string/signup_btn" />

</LinearLayout>