<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">

    <EditText
        android:id="@+id/reply_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
    android:id="@+id/reply_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Room Name"
    android:textSize="24sp" />

    <TextView
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Username"
    android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn" />

    <TextView
        android:id="@+id/tvCommentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_btn" />

    <ListView
        android:id="@+id/lvComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>